# inklog

./: .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DI_ARCHITECTURE_ANALYSIS.md  README.md  README_EN.md  README_zh.md  deny.toml  docker-compose.test.yml  test_batch_write.rs
.github/workflows/: ci.yml  release.yml  tag-deleted.yml  test-docker.yml
benches/: inklog_bench.rs
docker/init-scripts/: 01-postgres-init.sql  02-mysql-init.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  SECURITY.md  USER_GUIDE.md  config-reference.md  prd.md  quickstart.md  task.md  tdd.md  test.md  troubleshooting.md  uat.md
examples/: Cargo.toml  README.md  basic.rs  cli_tools.rs  custom_format.rs  database_logging.rs  encryption.rs  encryption_compression.rs  file_logging.rs  http_health.rs  multi_sink_fallback.rs  s3_archive.rs  s3_archive_with_database.rs
examples/production/: microservice_logging.rs
examples/src/: common.rs  console_ops.rs  crypto_ops.rs  file_ops.rs  lib.rs  perf_ops.rs  template_ops.rs
examples/src/modules/: builder.rs  compression.rs  console.rs  database.rs  encryption.rs  fallback.rs  file.rs  http.rs  masking.rs  mod.rs  performance.rs  s3_archive.rs  template.rs
examples/tests/: integration_test.rs
scripts/: README-pre-commit.md  install-pre-commit.sh  pre-commit  test-docker.sh
specmark/changes/v012-optimization/: design.md  proposal.md  tasks.md
specmark/changes/v012-optimization/specs/cache/: spec.md
specmark/changes/v012-optimization/specs/database/: spec.md
specmark/changes/v012-optimization/specs/dependencies/: spec.md
specmark/changes/v012-optimization/specs/docs/: spec.md
specmark/changes/v012-optimization/specs/object-pool/: spec.md
specmark/changes/v012-optimization/specs/sink-trait/: spec.md
src/: config.rs  config_validator.rs  container.rs  error.rs  lib.rs  log_adapter.rs  log_level.rs  log_record.rs  manager.rs  masking.rs  metrics.rs  object_pool.rs  pool.rs  subscriber.rs  template.rs
src/archive/: mod.rs  service.rs  test_mock.rs
src/cache/: mod.rs
src/cli/: cli_impl.rs  decrypt.rs  generate.rs  main.rs  mod.rs  validate.rs
src/domain/: db_provider.rs  mod.rs
src/domain/config/: config.rs  mod.rs
src/domain/core/: container.rs  manager.rs  mod.rs  subscriber.rs
src/domain/types/: error.rs  log_record.rs  mod.rs
src/i18n/: i18n_impl.rs  mod.rs
src/infrastructure/: cache.rs  config.rs  database.rs  mod.rs
src/integrations/: dbnexus_adapter.rs  mod.rs
src/integrations/infra/: cache.rs  config.rs  database.rs  mod.rs
src/integrations/kit/: keys.rs  mod.rs  module.rs
src/integrations/storage/: mod.rs
src/integrations/storage/archive/: mod.rs  service.rs  test_mock.rs
src/sink/: async_file.rs  compression.rs  console.rs  database.rs  encryption.rs  entity.rs  file.rs  mod.rs  registry.rs  ring_buffered_file.rs
src/sink/database/: mod.rs
src/support/: mod.rs
src/support/io/: log_adapter.rs  mod.rs
src/support/io/sink/: async_file.rs  circuit_breaker.rs  compression.rs  console.rs  encryption.rs  entity.rs  file.rs  mod.rs  registry.rs  ring_buffered_file.rs  rotation.rs
src/support/io/sink/database/: database_impl.rs  mod.rs
src/support/observability/: metrics.rs  mod.rs
src/support/processing/: masking.rs  mod.rs  object_pool.rs  template.rs
src/validation/: mod.rs  path.rs  sanitize.rs
tests/: archive_schedule_test.rs  auto_recovery_test.rs  batch_write_test.rs  cli_integration.rs  config_env_test.rs  e2e_advanced.rs  http_server_test.rs  integration_tests.rs  parquet_test.rs  stability.rs  unit_tests.rs  verification.rs
tests/combinations/: complex_features_test.rs  encryption_file_test.rs  mod.rs  multi_sink_fallback_test.rs  s3_database_integration_test.rs
tests/docker/: database_lifecycle_test.rs  database_sink_test.rs  dbnexus_adapter_test.rs  main.rs
tests/integration/: additional_tests.rs  comprehensive_validation_test.rs  file_logging_test.rs  integration_tests.rs  mod.rs
tests/integration/archive/: archive_schedule_test.rs  mod.rs
tests/integration/batch/: batch_write_test.rs  mod.rs
tests/integration/cli/: cli_test.rs
tests/integration/compression_ratio/: compression_ratio_test.rs  mod.rs
tests/integration/config/: config_env_test.rs  mod.rs
tests/integration/http/: http_server_test.rs  mod.rs
tests/integration/log/: log_native_test.rs  mod.rs
tests/integration/parquet/: mod.rs  parquet_test.rs
tests/integration/recovery/: auto_recovery_test.rs  mod.rs
tests/integration/stability/: mod.rs  stability.rs
tests/integration/verification/: mod.rs  verification.rs
tests/performance/: benchmark_test.rs  large_volume_test.rs  long_running_test.rs  mod.rs  resource_monitor_test.rs
tests/unit/: masking_test.rs  mod.rs  unit_tests.rs
tests/unit/archive/: mod.rs
tests/unit/cli/: mod.rs
tests/unit/concurrent/: concurrent_safety_test.rs
tests/unit/config/: mod.rs
tests/unit/memory/: memory_leak_test.rs
tests/unit/sink/: async_file_test.rs  circuit_breaker_test.rs  entity_test.rs  mod.rs
