[package]
name = "inklog"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
authors = ["Kirky.X"]
description = "Enterprise-grade Rust logging infrastructure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kirky-X/inklog"

[package.metadata.docs.rs]
features = ["default", "http", "cli"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"permission\", \"sqlite\", \"postgres\", \"mysql\"))"] }

[features]
default = ["http", "cli"]
dbnexus = ["dep:dbnexus", "dep:sea-orm"]
http = ["dep:axum"]
test-local = []
cli = ["dep:clap", "dep:glob"]
debug = []
metrics = []

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "registry", "env-filter"] }
tracing-core = "0.1"
crossbeam-channel = "0.5"
tokio = { version = "1.50", features = ["full"] }
rayon = "1.11"
num_cpus = "1.17"
futures = { version = "0.3", features = ["executor"] }
owo-colors = { version = "4.3", features = ["supports-colors"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1" }
trait-kit = "0.1.0"
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0"
anyhow = "1.0"
num-traits = "0.2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", optional = true }
uuid = { version = "1.22", features = ["v4"] }
hostname = "0.4"
is-terminal = "0.4"
once_cell = "1.21"
nix = { version = "0.31", features = ["fs"] }
bytes = "1.11"
dirs = "6.0"
parking_lot = "0.12"
oxcache = { version = "0.3.3", default-features = false, features = ["macros", "memory", "serialization", "tracing"] }
zstd = "0.13"
aes-gcm = "0.11"
rand = "0.10"
base64 = "0.22"
parquet = { version = "59.0", features = ["async"] }
arrow-array = "59.0"
arrow-schema = "59.0"
dbnexus = { version = "0.2.0", default-features = false, features = ["sqlite", "sql-parser", "config-env", "macros", "permission"], optional = true }
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["runtime-tokio-native-tls", "with-chrono"], optional = true }
flate2 = "1.1"
brotli = "8.0"
lz4 = "1.28"
cron = "0.17"
chrono-tz = "0.10"
tokio-cron-scheduler = "0.15"
zeroize = "1.8"
zeroize_derive = "1.4"
sha2 = "0.11"
pbkdf2 = "0.13"
clap = { version = "4.6", features = ["derive", "env"], optional = true }
glob = { version = "0.3", optional = true }
ipnet = "2.12"
subtle = "2.6"

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["async_tokio"] }
serial_test = "3.4"
axum = "0.8"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
filetime = "0.2"
bytes = "1.11"
assert_cmd = "2.2"
predicates = "3.1"

[[bench]]
name = "inklog_bench"
harness = false

[[bin]]
name = "inklog-cli"
path = "src/cli/mod.rs"
