[package]
name = "inklog"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
authors = ["Kirky.X"]
description = "Enterprise-grade Rust logging infrastructure"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kirky-X/inklog"

[package.metadata.docs.rs]
features = ["default", "http", "cli"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"permission\", \"sqlite\", \"postgres\", \"mysql\"))"] }

[features]
default = ["http", "cli"]
sqlite = ["dep:dbnexus", "dep:sea-orm", "dbnexus/sqlite", "sea-orm/sqlx-sqlite"]
postgres = ["dep:dbnexus", "dep:sea-orm", "dbnexus/postgres", "sea-orm/sqlx-postgres"]
mysql = ["dep:dbnexus", "dep:sea-orm", "dbnexus/mysql", "sea-orm/sqlx-mysql"]
http = ["dep:axum"]
test-local = []
cli = ["dep:clap", "dep:glob"]
debug = []
metrics = []

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "registry", "env-filter"] }
crossbeam-channel = "0.5"
tokio = { version = "1.52", features = ["full"] }
rayon = "1.12"
futures = { version = "0.3", features = ["executor"] }
owo-colors = { version = "4.3", features = ["supports-colors"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1" }
trait-kit = "0.1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", optional = true }
is-terminal = "0.4"
once_cell = "1.21"
nix = { version = "0.31", features = ["fs"] }
bytes = "1.12"
dirs = "6.0"
parking_lot = "0.12"
oxcache = { version = "0.3.3", default-features = false, features = ["macros", "memory", "serialization", "tracing"] }
zstd = "0.13"
aes-gcm = "0.11"
rand = "0.10"
base64 = "0.22"
parquet = { version = "59.0", features = ["async"] }
arrow-array = "59.0"
arrow-schema = "59.0"
dbnexus = { version = "0.2.0", default-features = false, features = ["sql-parser", "config-env", "macros", "permission"], optional = true }
sea-orm = { version = "2.0.0-rc.38", default-features = false, features = ["runtime-tokio-rustls", "with-chrono"], optional = true }
flate2 = "1.1"
zeroize = "1.9"
sha2 = "0.11"
pbkdf2 = "0.13"
clap = { version = "4.6", features = ["derive", "env"], optional = true }
glob = { version = "0.3", optional = true }
ipnet = "2.12"
subtle = "2.6"

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["async_tokio"] }
serial_test = "3.5"
axum = "0.8"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
filetime = "0.2"
bytes = "1.12"
assert_cmd = "2.2"
predicates = "3.1"

[[bench]]
name = "inklog_bench"
harness = false

[[bin]]
name = "inklog-cli"
path = "src/cli/mod.rs"
