[package]
name = "inklog"
version = "0.1.11"
edition = "2024"
rust-version = "1.94"
authors = ["Kirky.X"]
description = "Enterprise-grade Rust logging infrastructure"
license = "MIT"
repository = "https://github.com/Kirky-X/inklog"

[workspace]
resolver = "2"
members = [".", "examples"]

[package.metadata.docs.rs]
features = ["default", "http", "cli", "compression", "parquet"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"permission\", \"sqlite\", \"postgres\", \"mysql\", \"duckdb\", \"kit\", \"i18n\", \"compression\", \"parquet\"))"] }

[features]
default = []
sqlite = ["dep:dbnexus", "dep:sea-orm", "dbnexus/sqlite", "sea-orm/sqlx-sqlite"]
postgres = ["dep:dbnexus", "dep:sea-orm", "dbnexus/postgres", "sea-orm/sqlx-postgres"]
mysql = ["dep:dbnexus", "dep:sea-orm", "dbnexus/mysql", "sea-orm/sqlx-mysql"]
# duckdb feature 仅用于绕过 dbnexus 0.4.0+ 的 compile_error 规则 2 例外：
# 当 sqlite+duckdb+postgres+mysql 全部 4 个后端都启用时允许共存（用于 --all-features 测试）。
# DatabaseSink 仅支持 sea-orm 后端（sqlite/postgres/mysql），不直接支持 duckdb 驱动。
duckdb = ["dep:dbnexus", "dep:sea-orm", "dbnexus/duckdb"]
http = ["dep:axum"]
test-local = []
cli = ["dep:clap", "dep:glob"]
debug = []
metrics = []
kit = ["dep:trait-kit", "dbnexus/kit", "oxcache/kit"]
i18n = ["dep:icu", "dep:writeable"]
# Zstd compression support for rotated log files (optional to avoid zstd-sys
# symbol conflicts with downstream projects that bundle their own zstd).
compression = ["dep:zstd"]
# Parquet/Arrow export support for database sink archival.
parquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema"]

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "registry", "env-filter"] }
crossbeam-channel = "0.5"
tokio = { version = "1.52", features = ["full"] }
rayon = "1.12"
futures = { version = "0.3", features = ["executor"] }
owo-colors = { version = "4.3", features = ["supports-colors"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "1.1" }
trait-kit = { version = "0.3", features = ["async"], optional = true, default-features = false }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", optional = true }
is-terminal = "0.4"
once_cell = "1.21"
bytes = "1.12"
dirs = "6.0"
parking_lot = "0.12"
oxcache = { version = "0.3", default-features = false, features = ["macros", "memory", "serialization", "tracing"] }
zstd = { version = "0.13", optional = true }
aes-gcm = "0.11"
rand = "0.10"
base64 = "0.22"
parquet = { version = "59.0", features = ["async"], optional = true }
arrow-array = { version = "59.0", optional = true }
arrow-schema = { version = "59.0", optional = true }
dbnexus = { version = "0.4", default-features = false, features = ["sql-parser", "config-env", "macros", "permission"], optional = true }
sea-orm = { version = "2.0", default-features = false, features = ["runtime-tokio-rustls", "with-chrono"], optional = true }
flate2 = "1.1"
zeroize = "1.9"
sha2 = "0.11"
pbkdf2 = "0.13"
clap = { version = "4.6", features = ["derive", "env"], optional = true }
glob = { version = "0.3", optional = true }
ipnet = "2.12"
subtle = "2.6"
icu = { version = "2.2", optional = true }
writeable = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.27"
criterion = { version = "0.8", features = ["async_tokio"] }
serial_test = "3.5"
axum = "0.8"
log = "0.4"
reqwest = { version = "0.13", features = ["json"] }
filetime = "0.2"
bytes = "1.12"
assert_cmd = "2.2"
predicates = "3.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["fs"] }

[[bench]]
name = "inklog_bench"
harness = false

[[bin]]
name = "inklog-cli"
path = "src/cli/main.rs"
required-features = ["cli"]
