[package]
name = "inklog-examples"
version = "0.1.1"
edition = "2021"
publish = false
description = "Examples for inklog - Enterprise-grade Rust logging infrastructure"

[features]
sqlite = ["inklog/sqlite", "dep:dbnexus", "dbnexus/sqlite"]
postgres = ["inklog/postgres", "dep:dbnexus", "dbnexus/postgres"]
mysql = ["inklog/mysql", "dep:dbnexus", "dbnexus/mysql"]

[dependencies]
inklog = { path = ".." }
async-trait = "0.1"
dbnexus = { path = "../../dbnexus", default-features = false, features = ["sql-parser", "config-env", "macros", "permission"], optional = true }
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.20", features = ["v4"] }
chrono = "0.4.44"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.10.0"
tempfile = "3.27.0"
# Layer 0 示例所需：log crate 适配器、channel、自定义正则模式
log = "0.4"
crossbeam-channel = "0.5"
regex = "1.12"

[[bin]]
name = "console"
path = "src/bin/console.rs"

[[bin]]
name = "file"
path = "src/bin/file.rs"

[[bin]]
name = "encryption"
path = "src/bin/encryption.rs"

[[bin]]
name = "performance"
path = "src/bin/performance.rs"

[[bin]]
name = "database"
path = "src/bin/database.rs"

[[bin]]
name = "http"
path = "src/bin/http.rs"

[[bin]]
name = "fallback"
path = "src/bin/fallback.rs"

# 现有 binary（保留）
[[bin]]
name = "basic"
path = "src/bin/basic.rs"

[[bin]]
name = "production"
path = "src/bin/production.rs"

[[bin]]
name = "all_features"
path = "src/bin/all_features.rs"

# Layer 0 零依赖示例
[[bin]]
name = "builder"
path = "src/bin/builder.rs"

[[bin]]
name = "template"
path = "src/bin/template.rs"

[[bin]]
name = "masking"
path = "src/bin/masking.rs"

[[bin]]
name = "di_example"
path = "src/bin/di_example.rs"

[[bin]]
name = "object_pool"
path = "src/bin/object_pool.rs"

[[bin]]
name = "path_validator"
path = "src/bin/path_validator.rs"

[[bin]]
name = "log_sanitizer"
path = "src/bin/log_sanitizer.rs"

[[bin]]
name = "log_adapter"
path = "src/bin/log_adapter.rs"

# Layer 1 本地资源示例
[[bin]]
name = "compression"
path = "src/bin/compression.rs"

[[bin]]
name = "rotation"
path = "src/bin/rotation.rs"

[[bin]]
name = "ring_buffered_file"
path = "src/bin/ring_buffered_file.rs"

[[bin]]
name = "config_file"
path = "src/bin/config_file.rs"

# Layer 2 外部服务示例
[[bin]]
name = "metrics"
path = "src/bin/metrics.rs"

[[bin]]
name = "circuit_breaker"
path = "src/bin/circuit_breaker.rs"

# Layer 2 公共 API 补全示例
[[bin]]
name = "log_level"
path = "src/bin/log_level.rs"

[[bin]]
name = "channel_strategy"
path = "src/bin/channel_strategy.rs"

[[bin]]
name = "http_auth"
path = "src/bin/http_auth.rs"

[[bin]]
name = "env_overrides"
path = "src/bin/env_overrides.rs"

[[bin]]
name = "config_inspect"
path = "src/bin/config_inspect.rs"

[[bin]]
name = "parquet_archive"
path = "src/bin/parquet_archive.rs"

[[bin]]
name = "database_pg_mysql"
path = "src/bin/database_pg_mysql.rs"
